unpackaged/main/default/objects/Book_Interest__c/Book_Interest__c.object-meta.xml
<CustomObject>
    <description>Books that a person is interested in.</description>
    <label>Book Interest</label>
    <nameField>
        <displayFormat>BI-{00000}</displayFormat>
        <label>Book Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>