unpackaged/main/default/objects/Book_Interest__c/fields/Annualization_Number__c.field-meta.xml
<CustomField>
    <fullName>Annualization_Number__c</fullName>
    <formula>Book__r.Annualization_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualization Number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>