unpackaged/main/default/objects/Book_Interest__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Interests</relationshipLabel>
    <relationshipName>Book_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>