unpackaged/main/default/objects/Book_Interest__c/fields/BookName__c.field-meta.xml
<CustomField>
    <fullName>BookName__c</fullName>
    <formula>Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BookName</label>
    <type>Text</type>
</CustomField>