unpackaged/main/default/objects/Book_Interest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Book Interests</relationshipLabel>
    <relationshipName>Book_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>