unpackaged/main/default/objects/Book_Interest__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <formula>Book__r.Publish_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>